--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validation": "^3.0.8",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize": "^6.6.4"
   }
 }
