--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
+    "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
     "loadsh": "^0.0.4",
     "mysql2": "^2.2.5",
